--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<div id="FilterableMembersList"></div>
+	<div id="books-app"></div>
 	<script src="static/js/build.js"></script>
 </body>
 </html>
